--- a/docs/doc.tex
+++ b/docs/doc.tex
@@ -11,6 +11,16 @@
 
 hola es el segundo primer documento en LaTeX luego de muchos años
 
+ahora lpor lo general vamos a ver si esto lo hace en tiempo real
+
+he agregado informacion
+
+\section[x1]{fasfas}
+
+fafas
+
+
+\section[x1]{fasfas2}
 
 
 \end{document}
